# pahe

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  license.md  readme.md
.cargo/: config.toml
.github/workflows/: release.yml
assets/: batch.tape  downloading.tape  interactive.tape  test.tape  vhs.fish
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  args.rs  constants.rs  episode.rs  logger.rs  main.rs  progress.rs  prompt.rs  render.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  kwik.rs  lib.rs  parser.rs  utils.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: errors.rs  lib.rs
src/: builder.rs  client.rs  errors.rs  lib.rs  main.rs  prelude.rs
