[package]
name = "pahe"
version = "0.0.1-alpha"
edition = "2024"

[dependencies]
pahe-core = { path = "crates/core", version = "0" }
anyhow.workspace = true
regex.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/downloader",
]

[workspace.dependencies]
pahe = { path = "." }
pahe-downloader = { path = "crates/downloader" }
crossterm = "0.29"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
regex = "1"
reqwest = { version = "0.12", features = ["cookies", "rustls-tls", "json"] }
scraper = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
owo-colors = { version = "4" }
inquire = { version = "0.7" }
