[package]
name = "pahe-cli"
description = "pahe's cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
inquire.workspace = true
pahe.workspace = true
pahe-downloader.workspace = true
tokio.workspace = true
owo-colors.workspace = true
crossterm.workspace = true
regex.workspace = true
