[package]
name = "pahe-downloader"
description = "pahe's downloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
crossterm.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
owo-colors.workspace = true
